--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,10 @@
+@use './styles/variables' as var;
+
 .App {
-	
+	width: 100vm;
+	height: 100vh;
+	background-color: var.$color-light-grey;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
