--- a/src/index.scss
+++ b/src/index.scss
@@ -6,14 +6,15 @@
 	padding: 0;
 	font-family: 'Poppins', sans-serif;
 
-	& input::-webkit-outer-spin-button,
-	& input::-webkit-inner-spin-button {
-		/* display: none; <- Crashes Chrome on hover */
-		-webkit-appearance: none;
-		margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
-	}
+}
 
-	& input[type=number] {
-		-moz-appearance: textfield; /* Firefox */
-	}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	/* display: none; <- Crashes Chrome on hover */
+	-webkit-appearance: none;
+	margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+input[type=number] {
+	-moz-appearance: textfield; /* Firefox */
 }
