--- a/src/styles/wrapper.scss
+++ b/src/styles/wrapper.scss
@@ -3,9 +3,9 @@
 .Wrapper {
 	background-color: var.$color-white;
 	width: auto;
-	max-width: 500px;
+	min-width: 600px;
 	height: auto;
-	max-height: 500px;
+	min-height: 400px;
 	border-radius: 20px 20px 100px 20px;
-	padding: 30px;
+	padding: 50px;
 }
