--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,3 +5,8 @@ $color-off-white: hsl(0, 0%, 94%);
 $color-light-grey: hsl(0, 0%, 86%);
 $color-smokey-grey: hsl(0, 1%, 44%);
 $color-off-black: hsl(0, 0%, 8%);
+
+
+// Media Queries
+$breakpoint-m: 768px;
+$breakpoint-s: 414px;
