--- a/src/styles/result.scss
+++ b/src/styles/result.scss
@@ -1,11 +1,26 @@
 @use './variables' as var;
 
 .Result {
+	width: fit-content;
+	
+	@media screen and (max-width: var.$breakpoint-m) {
+		margin: 0 auto;
+	}
+
 	& h1 {
 		font-size: 60px;
 		font-weight: 800;
 		font-style: italic;
 		line-height: 1.2em;
+		width: fit-content;
+
+		@media screen and (max-width: var.$breakpoint-m) {
+			font-size: 50px;
+		}
+		
+		@media screen and (max-width: var.$breakpoint-s) {
+			font-size: 40px;
+		}
 
 		& .remains {
 			color: var.$color-purple;
