--- a/src/styles/wrapper.scss
+++ b/src/styles/wrapper.scss
@@ -8,4 +8,12 @@
 	min-height: 400px;
 	border-radius: 20px 20px 100px 20px;
 	padding: 50px;
+
+	@media screen and (max-width: var.$breakpoint-m) {
+		width: 100%;
+		max-width: 500px;
+		min-width: 200px;
+		margin: auto 20px;
+		padding: 20px;
+	}
 }
